# fasrt

./: .codecov.yml  Cargo.toml  PLAN.md  README-zh_CN.md  README.md  build.rs
.github/workflows/: ci.yml  loc.yml
assets/: html5_entities.json
benches/: BENCHMARK_REPORT.md  srt.rs  vtt.rs
benches/data/real/: Bleach_cor.movie.bleach.memories.of.nobody.[10E30056].srt  DeathNote_03_eng.srt  DeathNote_04.eng.srt  DeathNote_05.eng.srt  DeathNote_06.eng.srt  DeathNote_09.eng.srt  DeathNote_10.eng.srt  DeathNote_11.eng.srt  DeathNote_13.eng.srt  DeathNote_15.eng.srt  DeathNote_16.eng.srt  DeathNote_17.eng.srt  DeathNote_19.eng.srt  DeathNote_22.eng.srt  DeathNote_23.eng.srt  DeathNote_25.eng.srt  DeathNote_26.eng.srt  DeathNote_27.eng.srt  DeathNote_30.eng.srt  DeathNote_32.eng.srt  DeathNote_35.eng.srt  DeathNote_DEATH.NOTE.S01E02.WEBRip.Netflix.en[cc].srt  DeathNote_DEATH.NOTE.S01E03.WEBRip.Netflix.en[cc].srt  DeathNote_DEATH.NOTE.S01E04.WEBRip.Netflix.en[cc].srt  DeathNote_DEATH.NOTE.S01E05.WEBRip.Netflix.en[cc].srt  DeathNote_DEATH.NOTE.S01E06.WEBRip.Netflix.en[cc].srt  DeathNote_DEATH.NOTE.S01E08.WEBRip.Netflix.en[cc].srt  DeathNote_DEATH.NOTE.S01E11.WEBRip.Netflix.en[cc].srt  DeathNote_DEATH.NOTE.S01E12.WEBRip.Netflix.en[cc].srt  DeathNote_DEATH.NOTE.S01E13.WEBRip.Netflix.en[cc].srt  DeathNote_DEATH.NOTE.S01E14.WEBRip.Netflix.en[cc].srt  DeathNote_DEATH.NOTE.S01E15.WEBRip.Netflix.en[cc].srt  DeathNote_DEATH.NOTE.S01E16.WEBRip.Netflix.en[cc].srt  (+14 more)
ci/: miri_sb.sh  miri_tb.sh  sanitizer.sh
fixtures/srt/: Bleach_Bleach Memories of Nobody.srt  DeathNote_02.eng.srt  DeathNote_07.eng.srt  DeathNote_08.eng.srt  DeathNote_12.eng.srt  DeathNote_14.eng.srt  DeathNote_18.eng.srt  DeathNote_20.eng.srt  DeathNote_21.eng.srt  DeathNote_24.eng.srt  DeathNote_28.eng.srt  DeathNote_29.eng.srt  DeathNote_31.eng.srt  DeathNote_33.eng.srt  DeathNote_34.eng.srt  DeathNote_36.eng.srt  DeathNote_37.eng.srt  DeathNote_DEATH.NOTE.S01E01.WEBRip.Netflix.en[cc].srt  DeathNote_DEATH.NOTE.S01E07.WEBRip.Netflix.en[cc].srt  DeathNote_DEATH.NOTE.S01E09.WEBRip.Netflix.en[cc].srt  DeathNote_DEATH.NOTE.S01E10.WEBRip.Netflix.en[cc].srt  DeathNote_DEATH.NOTE.S01E18.WEBRip.Netflix.en[cc].srt  DeathNote_DEATH.NOTE.S01E19.WEBRip.Netflix.en[cc].srt  DeathNote_DEATH.NOTE.S01E20.WEBRip.Netflix.en[cc].srt  DeathNote_DEATH.NOTE.S01E22.WEBRip.Netflix.en[cc].srt  DeathNote_DEATH.NOTE.S01E23.WEBRip.Netflix.en[cc].srt  DeathNote_DEATH.NOTE.S01E25.WEBRip.Netflix.en[cc].srt  DeathNote_DEATH.NOTE.S01E28.WEBRip.Netflix.en[cc].srt  DeathNote_DEATH.NOTE.S01E29.WEBRip.Netflix.en[cc].srt  DeathNote_DEATH.NOTE.S01E32.WEBRip.Netflix.en[cc].srt  DeathNote_DEATH.NOTE.S01E35.WEBRip.Netflix.en[cc].srt  NarutoShippuuden_NARUTO - 1x01 - Enter! Uzumaki Naruto.DVDRip.gr.srt  NarutoShippuuden_NARUTO - 1x02 - I am Konohamaru.DVDRip.gr.srt
src/: error.rs  lib.rs  srt.rs  types.rs  utils.rs  vtt.rs
src/srt/: types.rs
src/types/: buf.rs  entry.rs  macros.rs  srt.rs  unit.rs
src/vtt/: cue.rs  cue_text.rs  html5_entities.rs  types.rs
src/vtt/cue/: tree.rs
tests/: foo.rs  srt.rs  vtt.rs  vtt_cue_text.rs  wpt_cue_text.rs  wpt_vtt.rs
