[package]
name = "fasrt"
version = "0.0.0"
edition = "2024"
repository = "https://github.com/al8n/fasrt"
homepage = "https://github.com/al8n/fasrt"
documentation = "https://docs.rs/fasrt"
description = "A blazing fast SRT subtitle parser and writer in Rust."
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[[bench]]
path = "benches/foo.rs"
name = "foo"
harness = false

[features]
default = ["std"]
alloc = []
std = ["thiserror/std"]

[dependencies]
derive_more = { version = "2", default-features = false, features = ["display", "from", "into", "is_variant", "unwrap", "try_unwrap"] }
itoa = { version = "1", default-features = false }
logos = { version = "0.16", default-features = false, features = ["export_derive"] }
paste = "1"
seq-macro = "0.3"
thiserror = { version = "2", default-features = false }

[dev-dependencies]
criterion = "0.8"
tempfile = "3"

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(all_tests)',
  'cfg(tarpaulin)',
] }
