[package]
name = "fasrt"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/Findit-AI/fasrt"
homepage = "https://github.com/Findit-AI/fasrt"
documentation = "https://docs.rs/fasrt"
description = "A blazing fast, zero-copy subtitle parser and writer for SRT and WebVTT in Rust."
license = "MIT OR Apache-2.0"
rust-version = "1.85"
keywords = ["subtitle", "srt", "webvtt", "vtt"]
categories = ["parser-implementations", "parsing-tools", "multimedia", "no-std::no-alloc", "encoding"]

exclude = ["tests", "fixtures"]

[[bench]]
path = "benches/srt.rs"
name = "srt"
harness = false

[features]
default = ["std"]
alloc = ["memchr"]
std = ["thiserror/std", "memchr"]

[dependencies]
derive_more = { version = "2", default-features = false, features = ["display", "from", "into", "is_variant", "unwrap", "try_unwrap"] }
logos = { version = "0.16", default-features = false, features = ["export_derive"] }
phf = { version = "0.13", default-features = false }
thiserror = { version = "2", default-features = false }

memchr = { version = "2", optional = true, default-features = false }

[build-dependencies]
phf_codegen = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(all_tests)',
  'cfg(tarpaulin)',
] }

